# quadrf-android

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  index.html  requirements.txt  settings.gradle  setup-gh-pages.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  deploy.yml
api/: package.json  server.js
app/: build.gradle  proguard-rules.pro
app/src/androidTest/java/com/quadrf/usbhost/: UsbHostTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/help/: user_manual.html
app/src/main/cpp/: CMakeLists.txt  demodulator.cpp  demodulator.h  fft_wrapper.cpp  fft_wrapper.h  native-lib.cpp  sdr_processor.cpp  sdr_processor.h
app/src/main/java/com/quadrf/usbhost/: JniCallback.java  MainActivity.java  SdrService.java
app/src/main/java/com/quadrf/usbhost/ui/: FrequencyControl.java  WaterfallView.java
app/src/main/res/drawable/: ic_launcher.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml
app/src/main/res/xml/: device_filter.xml
assets/: index-B6_8fH-3.js  index-DqL6_cNI.css
docs/: architecture.txt
scripts/: build_fftw.sh  build_libusb.sh
ui/: index.html  package.json  vite.config.js
ui/src/: App.jsx  style.css
